--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
-	<script>
-		require(['./dist/app.js']);
-	</script>
+	<script data-main="dist/app" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 </head>
+<body>
+</body>
 </html>
